--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest": "^30.2.0",
     "playwright": "^1.56.1",
     "prettier": "^3.6.2",
+    "ts-node": "^10.9.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^7.2.2"
