--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Run unit tests
         run: npm run test
 
+      - name: Install Playwright Browsers
+        run: npx playwright install
+        
       - name: Run E2E tests
         run: npm run e2e
 
