--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "maplibre-gl": "^5.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "zustand": "^5.0.8"
@@ -35,6 +36,8 @@
     "jest": "^30.2.0",
     "playwright": "^1.56.1",
     "prettier": "^3.6.2",
+    "sass": "^1.94.0",
+    "sass-loader": "^16.0.6",
     "ts-node": "^10.9.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
