--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "maplibre-gl": "^5.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "recharts": "^3.4.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
