--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "geotiff": "^2.1.4-beta.1",
     "maplibre-gl": "^5.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
