--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "geotiff": "^2.1.4-beta.1",
     "maplibre-gl": "^5.12.0",
+    "proj4": "^2.20.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^3.4.1",
