--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@turf/circle": "^7.3.1",
     "geotiff": "^2.1.4-beta.1",
     "maplibre-gl": "^5.12.0",
     "proj4": "^2.20.2",
