--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,11 +8,11 @@
     "types": ["vite/client", "jest"],
     "skipLibCheck": true,
     "baseUrl": ".",
-    "paths": {
+    /* "paths": {
       "@/*": [
         "src/*"
       ],
-    },
+    }, */
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
